# open_moba_backend

./: .gitattributes  .gitignore  ABILITY_SYSTEM_STATUS.md  CHANGELOG.md  Cargo.toml  README.md  backend_logs.txt  build.rs  build.sh  game.toml  game_stress.toml  install_linkers.sh  log4rs.yml  map.json  player_profile.json  test.rs  test_vision_debug.rs  test_vision_only.rs
.cargo/: config.toml  config_examples.toml
.claude/: settings.local.json
Story/: templates.json
Story/B01_1/: ABILITY_README.md  ENTITY_README.md  MAP_README.md  MISSION_README.md  ability.json  entity.json  map.json  mission.json
Story/DEBUG_1/: ability.json  entity.json  map.json  mission.json
Story/MVP_1/: entity.json  map.json  mission.json
Story/TD_1/: ability.json  entity.json  map.json
Story/TD_STRESS/: map.json  mission.json
ability-configs/: sniper_abilities.json
ability-system/: Cargo.toml
ability-system/src/: ability.rs  config.rs  effects.rs  handler.rs  lib.rs  processor.rs  types.rs
ability-system/src/heroes/: mod.rs
ability-system/src/heroes/B01_saika_magoichi/: No1_sniper_mode.rs  No2_saika_reinforcements.rs  No3_rain_iron_cannon.rs  No4_three_stage_technique.rs  mod.rs
ability-system/src/heroes/B02_date_masamune/: No1_flame_blade.rs  No2_fire_dash.rs  No3_flame_assault.rs  No4_matchlock_gun.rs  mod.rs
ability-system/tests/: integration_test.rs
example/: MAP_README.md  map.json  map_with_terrain.json  terrain_heightmap.json
examples/: README_MQTT_TEST.md  mqtt_test_client.py
item-configs/: items.json
script-abi/: Cargo.toml
script-abi/src/: ability.rs  lib.rs  manifest.rs  script.rs  stat_keys.rs  types.rs  world.rs
src/: README.md  aoi.rs  json_preprocessor.rs  lib.rs  main.rs  msg.rs  runtime_events.rs  test_posdata.rs  test_posdata_brute_force.rs
src/ability_runtime/: buff_store.rs  mod.rs  registry.rs  unit_stats.rs
src/comp/: README.md  ability.rs  ability_comp.rs  attack.rs  base.rs  blocked_region.rs  bounty.rs  building.rs  campaign.rs  campaign_manager.rs  check_point.rs  circular_vision.rs  circular_vision_refactored.rs  clock.rs  collision_index.rs  creep.rs  creep_move_broadcast.rs  damage.rs  ecs.rs  ecs_setup.rs  enemy.rs  facing.rs  game_mode.rs  game_processor.rs  gold.rs  heightmap.rs  hero.rs  inventory.rs  is_base.rs  item_effects.rs  last.rs  lockstep_resources.rs  mod.rs  mqtt_handler.rs  outcome.rs  phys.rs  player.rs  projectile.rs  resources.rs  skill.rs  (+9 more)
src/comp/outcome_system/: combat_events.rs  creation_events.rs  event_dispatcher.rs  mod.rs  movement_events.rs  system_events.rs
src/comp/vision/: calculator.rs  components.rs  mod.rs  result_manager.rs  shadow_system.rs
src/config/: README.md  mod.rs  server_config.rs  vision_config.rs
src/item/: mod.rs
src/knowledge/: kp_reward.rs  loader.rs  mod.rs  player_profile.rs
src/lockstep/: input_buffer.rs  metadata_guard.rs  mod.rs  snapshot_producer.rs  state.rs  state_hash_producer.rs  tick_broadcaster.rs
src/mqtt/: mod.rs  test_interface.rs
src/scripting/: dispatch.rs  event.rs  loader.rs  mod.rs  registry.rs  tag.rs  world_adapter.rs
src/state/: core.rs  dev_lua_hot_reload.rs  initialization.rs  mod.rs  query.rs  resource_management.rs  system_dispatcher.rs  time_management.rs
src/sync/: interpolation.rs  mod.rs  packet.rs  sync_ext.rs  track.rs
src/tick/: README.md  attack_phase.rs  buff_tick.rs  core_creep_tick.rs  creep_tick.rs  creep_wave.rs  damage_tick.rs  death_tick.rs  hero_move_tick.rs  hero_tick.rs  item_tick.rs  mod.rs  nearby_tick.rs  player_input_tick.rs  player_tick.rs  projectile_tick.rs  regen_tick.rs  skill_tick.rs  skill_tick_refactored.rs  slow_buff_tick.rs  summon_tick.rs  tower_tick.rs
src/tick/skill_system/: abilities.rs  effects.rs  input_handler.rs  mod.rs  processor.rs
src/transport/: game.rs  grpc_transport.rs  kcp_transport.rs  metrics.rs  mod.rs  mqtt_transport.rs  types.rs
src/ue4/: README.md  import_campaign.rs  import_map.rs  mod.rs
src/util/: ability_helper.rs  geometry.rs  mod.rs
src/vision/: bvh.rs  debug_test.rs  geometry_utils.rs  hash_grid.rs  improved_tests.rs  mathematical_tests.rs  mod.rs  quadtree.rs  shadow_calculation.rs  shadow_calculator.rs  spatial_index.rs  spatial_index_consistency_tests.rs  sweep_and_prune.rs  test_vision.rs  vision_cache.rs  vision_ecs.rs  vision_output.rs
tests/: combat_damage_integration.rs  delete_entity_outcome_only.rs  gen_docs_smoke.rs  lockstep_integration.rs  lockstep_state_hash_determinism.rs  network_bytes.rs
