[package]
name = "omobab"
version = "0.1.0"
edition = "2021"
authors = ["damody <t1238142000@gmail.com>"]

[lib]
name = "omobab"
crate-type = ["rlib"]

[[bin]]
name = "test_vision_only"
path = "test_vision_only.rs"


# 隱藏所有編譯器警告
[lints.rust]
warnings = "allow"

[workspace]
members = [
    ".",
    "ability-system"
]

[dependencies]
log = "0.4"
log4rs = "1.2.0"
failure = "0.1.8"
fern = "0.6"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
# paho-mqtt = "0.12.3"  # 暫時註解掉避免cmake編譯問題
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8.8"
specs = { path = "../specs", features = ["derive", "parallel", "serde"] }
rayon = "1.8.0"
num_cpus = "1.16.0"
vek = { version = "0.15.8", features = ["serde"] }
instant = { version = "0.1.12", features = [] }
instant-distance = "0.6.0"
rand = "0.8.5"
fastrand = "2.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
specs-derive = "0.4.1"
parking_lot = "0.12.1"
ability-system = { path = "ability-system" }
hashbrown = "0.14"
ordered-float = "4.2"
voracious_radix_sort = { version = "1.2.0", features = ["voracious_multithread"] }
rust_decimal = "1.33"
regex = "1.0"
lazy_static = "1.4"
tracing = "0.1"
rumqttc = "0.24"
round = "0.1"
async-std = { version = "1.12", features = ["attributes"] }
spin_sleep = "1.0"
sorted_intersection = "0.1"

[features]
default = []