[package]
name = "omobab"
version = "0.1.0"
edition = "2021"
authors = ["damody <t1238142000@gmail.com>"]

[lib]
name = "omobab"
crate-type = ["rlib"]

[[bin]]
name = "omobab"
path = "src/main.rs"


# 隱藏所有編譯器警告
[lints.rust]
warnings = "allow"

[workspace]
members = [
    ".",
    "ability-system",
    "script-abi",
]

[dependencies]
log = "0.4"
log4rs = { path="../log4rs", features = ["mqtt_appender", "yaml_format", "config_parsing"] }
failure = "0.1.8"
fern = "0.7"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
# paho-mqtt = "0.12.3"  # 暫時註解掉避免cmake編譯問題
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"
specs = { path = "../specs", features = ["derive", "parallel", "serde"] }
rayon = "1.8.0"
num_cpus = "1.16.0"
vek = { version = "0.17", features = ["serde"] }
instant = { version = "0.1.12", features = [] }
instant-distance = "0.6.0"
rand = "0.9"
fastrand = "2.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
parking_lot = "0.12.1"
ability-system = { path = "ability-system" }
hashbrown = "0.15"
ordered-float = "5.0"
abi_stable = "0.11"
omb-script-abi = { path = "script-abi" }
rand_pcg = "0.9"
voracious_radix_sort = { version = "1.2.0", features = ["voracious_multithread"] }
rust_decimal = "1.33"
regex = "1.0"
lazy_static = "1.4"
tracing = "0.1"
rumqttc = { version = "0.24", optional = true }
round = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
spin_sleep = "1.0"
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
async-stream = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio_kcp = { version = "0.9", optional = true }

[build-dependencies]
tonic-build = { version = "0.12", optional = true }
prost-build = { version = "0.13", optional = true }

[features]
default = ["kcp"]
mqtt = ["rumqttc"]
grpc = ["tonic", "prost", "async-stream", "tokio-stream/sync", "tonic-build", "tokio/sync", "tokio/time"]
kcp = ["tokio_kcp", "prost", "prost-build", "tokio/sync", "tokio/time", "tokio/net", "tokio/io-util"]